crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__fstring_expression_multiline.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "first ",
        ),
        2..8,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        8..9,
    ),
    (
        NonLogicalNewline,
        9..10,
    ),
    (
        Name(
            Name("x"),
        ),
        14..15,
    ),
    (
        NonLogicalNewline,
        15..16,
    ),
    (
        Star,
        24..25,
    ),
    (
        NonLogicalNewline,
        25..26,
    ),
    (
        Name(
            Name("y"),
        ),
        38..39,
    ),
    (
        NonLogicalNewline,
        39..40,
    ),
    (
        Rbrace,
        40..41,
    ),
    (
        FStringMiddle(
            " second",
        ),
        41..48,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringEnd,
        48..49,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        49..49,
    ),
]
```
