crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__fstring_single_quote_escape_windows_eol.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "text \\\r\n more text",
        ),
        2..20,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        20..21,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        21..21,
    ),
]
```
