crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__fstring_with_lambda_expression.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        2..3,
    ),
    (
        Lambda,
        3..9,
    ),
    (
        Name(
            Name("x"),
        ),
        10..11,
    ),
    (
        Colon,
        11..12,
    ),
    (
        Lbrace,
        12..13,
    ),
    (
        Name(
            Name("x"),
        ),
        13..14,
    ),
    (
        Rbrace,
        14..15,
    ),
    (
        Rbrace,
        15..16,
    ),
    (
        FStringEnd,
        16..17,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        17..18,
    ),
    (
        FStringStart,
        18..20,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        20..21,
    ),
    (
        Lpar,
        21..22,
    ),
    (
        Lambda,
        22..28,
    ),
    (
        Name(
            Name("x"),
        ),
        29..30,
    ),
    (
        Colon,
        30..31,
    ),
    (
        Lbrace,
        31..32,
    ),
    (
        Name(
            Name("x"),
        ),
        32..33,
    ),
    (
        Rbrace,
        33..34,
    ),
    (
        Rpar,
        34..35,
    ),
    (
        Rbrace,
        35..36,
    ),
    (
        FStringEnd,
        36..37,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        37..37,
    ),
]
```
